tests/snapshots/jira_issues__delete_succeeds_on_no_content.snap
---
source: tests/jira_issues.rs
expression: jira.request_snapshots().await
---
[
  {
    "body": null,
    "method": "DELETE",
    "path": "/ex/jira/test-cloud/rest/api/3/issue/DEMO-1",
    "query": []
  }
]
