tests/snapshots/jira_issues__get_parses_rendered_description_comments_and_story_points-2.snap
---
source: tests/jira_issues.rs
expression: jira.request_snapshots().await
---
[
  {
    "body": null,
    "method": "GET",
    "path": "/ex/jira/test-cloud/rest/api/3/issue/DEMO-1",
    "query": [
      {
        "k": "expand",
        "v": "renderedFields,names"
      }
    ]
  }
]
