tests/snapshots/jira_issues__set_sprint_puts_sprint_field_or_null.snap
---
source: tests/jira_issues.rs
assertion_line: 135
expression: "jira.json_bodies_for(\"PUT\", \"api/3/issue/DEMO-1\").await"
---
[
  {
    "fields": {
      "customfield_10020": 12
    }
  },
  {
    "fields": {
      "customfield_10020": null
    }
  }
]
